--- a/app/views/microposts/index.html.erb
+++ b/app/views/microposts/index.html.erb
@@ -12,18 +12,20 @@
   </thead>
 
   <tbody>
-    <% @microposts.each do |micropost| %>
-      <tr>
-        <td><%= micropost.content %></td>
-        <td><%= micropost.user_id %></td>
-        <td><%= link_to 'Show', micropost %></td>
-        <td><%= link_to 'Edit', edit_micropost_path(micropost) %></td>
-        <td><%= link_to 'Destroy', micropost, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
+   <% @microposts.each do |micropost| %>
+     <tr>
+       <td><%= micropost.content %></td>
+       <td><%= micropost.user_id %></td>
+       <td><%= link_to 'Show', micropost %></td>
+       <% if micropost.user_id == current_user.id %>
+         <td><%= link_to 'Edit', edit_micropost_path(micropost) %></td>
+         <td><%= link_to 'Destroy', micropost, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+       <% end %>
+     </tr>
+   <% end %>
+ </tbody>
 </table>
 
 <br>
 
-<%= link_to 'New Micropost', new_micropost_path %>
+<%= link_to 'New Micropost'
