--- a/app/views/microposts/_form.html.erb
+++ b/app/views/microposts/_form.html.erb
@@ -14,8 +14,12 @@
   <div class="field">
     <%= form.label :content %>
     <%= form.text_area :content, id: :micropost_content %>
+    
   </div>
-
+  <div class="field">
+  <%= form.label :image %>
+  <%= form.file_field :image %>
+  </div>
 
   <div class="actions">
     <%= form.submit %>
