--- a/app/views/microposts/show.html.erb
+++ b/app/views/microposts/show.html.erb
@@ -1,5 +1,14 @@
 <p id="notice"><%= notice %></p>
 
+<% if @micropost.image.attached? %>
+<!-- @post.image.present? will always return true, use attached? to check presence -->
+  <p>
+    <strong>Image:</strong>
+    <br>
+    <%= image_tag @micropost.image %>
+  </p>
+<% end %>
+
 <p>
   <strong>Content:</strong>
   <%= @micropost.content %>
@@ -9,6 +18,7 @@
   <strong>User:</strong>
   <%= @micropost.user_id %>
 </p>
+
 
 <%= link_to 'Edit', edit_micropost_path(@micropost) %> |
 <%= link_to 'Back', microposts_path %>
