--- a/app/views/microposts/index.html.erb
+++ b/app/views/microposts/index.html.erb
@@ -7,6 +7,7 @@
     <tr>
       <th>Content</th>
       <th>User</th>
+      <th>Category</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -16,6 +17,7 @@
      <tr>
        <td><%= micropost.content %></td>
        <td><%= micropost.user_id %></td>
+       <td><%= micropost.category_id %></td>
        <td><%= link_to 'Show', micropost %></td>
        <% if micropost.user_id == current_user.id %>
          <td><%= link_to 'Edit', edit_micropost_path(micropost) %></td>
