--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -21,6 +21,11 @@
     <%= form.text_area :content %>
   </div>
 
+  <div class="field">
+    <%= form.label :category_id %><br />
+    <%= form.collection_select :category_id, Category.all, :id, :name %>
+  </div>
+
   <div class="actions">
     <%= form.submit %>
   </div>
