--- a/app/views/microposts/index.html.erb
+++ b/app/views/microposts/index.html.erb
@@ -5,28 +5,33 @@
 <table>
   <thead>
     <tr>
-      <th>Content</th>
-      <th>User</th>
       <th>Category</th>
-      <th colspan="3"></th>
+      <th>User</th>
+      <th>content</th>
+      <th colspan="4"></th>
     </tr>
   </thead>
-
   <tbody>
    <% @microposts.each do |micropost| %>
      <tr>
-       <td><%= micropost.content %></td>
-       <td><%= micropost.user_id %></td>
-       <td><%= micropost.category_id %></td>
+       <td><% micropost.categories.pluck(:name).each do |cat| %>
+          <li><%=cat %></li>
+          <%end%>
+        </td>
+          <td><%=micropost.user.name %></td>
+          <td><%=micropost.content %></td>
+        
        <td><%= link_to 'Show', micropost %></td>
        <% if micropost.user_id == current_user.id %>
          <td><%= link_to 'Edit', edit_micropost_path(micropost) %></td>
          <td><%= link_to 'Destroy', micropost, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-       <% end %>
+      <% end %>
      </tr>
-   <% end %>
+    <% end %>
  </tbody>
+
 </table>
+
 
 <br>
 
