--- a/app/views/microposts/show.html.erb
+++ b/app/views/microposts/show.html.erb
@@ -8,6 +8,12 @@
     <%= image_tag @micropost.image %>
   </p>
 <% end %>
+<p>
+  <strong>Category:</strong>
+  <% @micropost.categories.pluck(:name).each do |cat| %>
+    <li><%=cat %></li>
+  <%end%>
+</p>
 
 <p>
   <strong>Content:</strong>
@@ -15,9 +21,10 @@
 </p>
 
 <p>
-  <strong>User:</strong>
-  <%= @micropost.user_id %>
-</p>
+    <strong>User:</strong>
+    <%=@micropost.user.name %>
+  </p>
+  
 
 
 <%= link_to 'Edit', edit_micropost_path(@micropost) %> |
