--- a/app/views/microposts/show.html.erb
+++ b/app/views/microposts/show.html.erb
@@ -9,7 +9,8 @@
   </p>
 <% end %>
 <p>
-  <strong>Category:</strong>
+  <strong>Category:</strong><p>
+  <%= @micropost.categories.count %> Categories</p>
   <% @micropost.categories.pluck(:name).each do |cat| %>
     <li><%=cat %></li>
   <%end%>
@@ -23,9 +24,15 @@
 <p>
     <strong>User:</strong>
     <%=@micropost.user.name %>
-  </p>
+</p>
   
-
-
+<p><%= @micropost.comments.count %> Comments</p>
+  <%= render @micropost.comments %>
+<p>leave a reply</p>
+  <%= render 'comments/form' %>
+  
 <%= link_to 'Edit', edit_micropost_path(@micropost) %> |
 <%= link_to 'Back', microposts_path %>
+
+
+  
