--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,5 +1,6 @@
-<%= form_for([@micropost, Comment.new]) do |form| %>
-  <div class="field">
+<%= form_for([micropost, Comment.new]) do |form| %>
+
+<div class="field">
     <%= form.label :name %>
     <%= form.text_field :name %>
   </div>
@@ -12,5 +13,4 @@
   <div class="actions">
     <%= form.submit %>
   </div>
-
 <% end %>
