--- a/app/views/microposts/index.html.erb
+++ b/app/views/microposts/index.html.erb
@@ -18,10 +18,9 @@
           <li><%=cat %></li>
           <%end%>
         </td>
-          <td><%=micropost.user.name %></td>
-          <td><%=micropost.content %></td>
-        
-       <td><%= link_to 'Show', micropost %></td>
+        <td><%=micropost.user_name %></td>
+        <td><%=micropost.content %></td>
+        <td><%= link_to 'Show', micropost %></td>
        <% if micropost.user_id == current_user.id %>
          <td><%= link_to 'Edit', edit_micropost_path(micropost) %></td>
          <td><%= link_to 'Destroy', micropost, method: :delete, data: { confirm: 'Are you sure?' } %></td>
