--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -13,7 +13,7 @@
   </thead>
 
   <tbody>
-    <% @categories.each do |category| %>
+    <% @categories.order(name: :asc).each do |category| %>
       <tr>
         <td><%= category.name %></td>
         <td><%= category.microposts.size %></td>
