--- a/app/views/microposts/show.html.erb
+++ b/app/views/microposts/show.html.erb
@@ -1,3 +1,4 @@
+<div id="micropost" data-id="<%= @micropost.id %>">
 <p id="notice"><%= notice %></p>
 
 <% if @micropost.image.attached? %>
@@ -9,6 +10,11 @@
   </p>
 <% end %>
 
+<p>
+  <strong>Content:</strong>
+  <%= @micropost.content %>
+</p>
+
 </p>
   <strong>Category:</strong><p>
   <%= @micropost.categories.count %> Categories</p>
@@ -18,18 +24,35 @@
 </p>
 
 <p>
-  <strong>Content:</strong>
-  <%= @micropost.content %>
+  <strong>User:</strong>
+  <%=@micropost.user_name %>
 </p>
 
-<p>
-    <strong>User:</strong>
-    <%=@micropost.user_name %>
-</p>
-<p><%= @micropost.comments.count %> Comments</p>
-  <%= render partial: 'comments/comment', collection: @micropost.comments %>
+<!--<p><%= @micropost.comments.count %> Comments</p>-->
+<!-- <%= render partial: 'comments/comment', collection: @micropost.comments %>-->
 <p>leave a reply</p>
-
+<p>
+<ul id="comments"></ul>
 <%= render partial: 'comments/form', locals: { micropost: @micropost } %>
-<%= link_to 'Edit', edit_micropost_path(@micropost) %>
-<%= link_to 'Back', microposts_path %>
+</p>
+
+  <%= link_to 'Edit', edit_micropost_path(@micropost) %>
+  <%= link_to 'Back', microposts_path %>
+</div>
+
+<script>
+$(function() {
+  var url = '/comments.json?micropost_id=' + $('#micropost').data('id')
+  $.get(url, function(result) {
+    result.forEach(function(comment) {
+      var li = $('<li>')
+      li.text(`name: ${comment.name} comment: ${comment.comment}`)
+      // li.text('name: ' + comment.name + 'comment: ' + comment.comment)
+      $('#comments').append(li)
+    })
+  })
+})
+</script>
+
+
+<div id="example">example text</div>
