--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,15 +9,15 @@
         <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
     </head>
 
+ 
     <body>
-        <%= link_to "sign up", new_user_registration_path %>
-        <% if user_signed_in? %>
-         <%= link_to('sign out', destroy_user_session_path, method: :delete) %>
-        <% else %>
-         <%= link_to "sign in", new_user_session_path %>
-        <% end %>
-         <p class="notice"><%= notice %></p>
-         <p class="alert"><%= alert %></p>
         <%= yield %>
+        <ul>
+            <% if user_signed_in? %>
+              <li><%= link_to('Logout', destroy_user_session_path, method: :delete) %></li>
+            <% else %>
+                <li><%= link_to('Login', new_user_session_path)%></li>
+            <% end %>
+        </ul>
     </body>
 </html>
