--- a/app/views/microposts/show.html.erb
+++ b/app/views/microposts/show.html.erb
@@ -1,4 +1,5 @@
 <div id="micropost" data-id="<%= @micropost.id %>">
+
 <p id="notice"><%= notice %></p>
 
 <% if @micropost.image.attached? %>
@@ -48,11 +49,9 @@ $(function() {
       var li = $('<li>')
       li.text(`name: ${comment.name} comment: ${comment.comment}`)
       // li.text('name: ' + comment.name + 'comment: ' + comment.comment)
+      li.append(`<a href='/comments/${comment.id}?micropost_id=${comment.micropost_id}' data-method="delete">Delete</a>`)
       $('#comments').append(li)
     })
   })
 })
 </script>
-
-
-<div id="example">example text</div>
