--- a/app/views/comments/index.html.erb
+++ b/app/views/comments/index.html.erb
@@ -17,8 +17,10 @@
         <td><%= comment.name %></td>
         <td><%= comment.comment %></td>
         <td><%= link_to 'Show', comment %></td>
+        <% if user_signed_in? && comment.user_id == current_user.id %>
         <td><%= link_to 'Edit', edit_comment_path(comment) %></td>>
         <td><%= link_to 'Destroy', comment, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <% end %>
       </tr>
     <% end %>
   </tbody>
