--- a/app/views/microposts/index.html.erb
+++ b/app/views/microposts/index.html.erb
@@ -21,7 +21,7 @@
         <td><%=micropost.user_name %></td>
         <td><%=micropost.content %></td>
         <td><%= link_to 'Show', micropost %></td>
-       <% if micropost.user_id == current_user.id %>
+       <% if user_signed_in? && micropost.user_id == current_user.id %>
          <td><%= link_to 'Edit', edit_micropost_path(micropost) %></td>
          <td><%= link_to 'Destroy', micropost, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       <% end %>
