comment and admin Permission

--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -2,4 +2,6 @@
 
 <%= render 'form', category: @category %>
 
-<%= link_to 'Back', categories_path %>
+<%= link_to 'Back to category', categories_path %>
+<p>Or</p>
+<%= link_to 'Back to new micropost', new_micropost_path %>
