--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -28,5 +28,6 @@
     <%= f.submit "Sign up" %>
   </div>
 <% end %>
+<%= link_to 'Back ', new_user_path %>
 
-<%= render "devise/shared/links" %>
+
