--- a/app/views/microposts/_form.html.erb
+++ b/app/views/microposts/_form.html.erb
@@ -10,6 +10,7 @@
       </ul>
     </div>
   <% end %>
+
   <div class="field">
     <%= hidden_field_tag "micropost[category_ids][]", nil%>
     <%  Category.all.each do |cat|%>
@@ -17,13 +18,17 @@
       <%= cat.name %>
     <% end %>
   </div>
+
   <div class="field">
     <%= form.label :content %>
     <%= form.text_area :content %>
+  </div>
+
   <div class="field">
     <%= form.label :image %>
     <%= form.file_field :image %>
   </div>
+
   <div class="actions">
     <%= form.submit %>
   </div>
