--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -17,8 +17,12 @@
         <td><%= user.name %></td>
         <td><%= user.email %></td>
         <td><%= link_to 'Show', user %></td>
-        <td><%= link_to 'Edit', edit_user_path(user) %></td>
+        <% if user_signed_in? && current_user.admin? %>
         <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <% end %>
+        <% if user_signed_in? && user.id == current_user.id %>
+        <td><%= link_to 'Edit', edit_user_path(user) %></td>
+        <% end %>
       </tr>
     <% end %>
   </tbody>
@@ -27,3 +31,5 @@
 <br>
 
 <%= link_to 'New Micropost', new_micropost_path %>
+<p></p>
+<%= link_to 'Micropost', microposts_path %>
