--- a/app/views/microposts/new.html.erb
+++ b/app/views/microposts/new.html.erb
@@ -1,5 +1,5 @@
 <h1>New Micropost</h1>
-
+<%= link_to 'Create new category', new_category_path %>
 <%= render 'form', micropost: @micropost %>
 
-<%= link_to 'Back', microposts_path %>
+<%= link_to 'Back to micropost', microposts_path %>
