--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,35 +1,5 @@
-<p id="notice"><%= notice %></p>
-
-<h1> Listing users</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Email</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @users.order(name: :asc).each do |user| %>
-      <tr>
-        <td><%= user.name %></td>
-        <td><%= user.email %></td>
-        <td><%= link_to 'Show', user %></td>
-        <% if user_signed_in? && current_user.admin? %>
-        <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-        <% end %>
-        <% if user_signed_in? && user.id == current_user.id %>
-        <td><%= link_to 'Edit', edit_user_path(user) %></td>
-        <% end %>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Micropost', new_micropost_path %>
-<p></p>
-<%= link_to 'Micropost', microposts_path %>
+<% provide(:title, 'All users') %> 
+<h1>All users</h1>
+<ul class="users">
+  <%= render @users %>
+</ul>
