--- a/app/views/microposts/index.html.erb
+++ b/app/views/microposts/index.html.erb
@@ -1,13 +1,15 @@
 <p id="notice"><%= notice %></p>
 
 <h1>Microposts</h1>
+<%= paginate @microposts %>
 
 <table>
   <thead>
     <tr>
       <th>Category</th>
       <th>User</th>
-      <th>content</th>
+      <th>Content</th>
+      <th>Date</th>
       <th colspan="4"></th>
     </tr>
   </thead>
@@ -20,6 +22,7 @@
         </td>
         <td><%=micropost.user_name %></td>
         <td><%=micropost.content %></td>
+        <td><%=micropost.created_at %></td>
         <td><%= link_to 'Show', micropost %></td>
        <% if user_signed_in? && micropost.user_id == current_user.id %>
          <td><%= link_to 'Edit', edit_micropost_path(micropost) %></td>
