--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -1,3 +1,6 @@
+@import "bootstrap-sprockets";
+@import "bootstrap";
+
 body {
   background-color: #fff;
   color: #333;
@@ -9,7 +12,7 @@ body {
 
 p, ol, ul, td {
   font-family: verdana, arial, helvetica, sans-serif;
-  font-size: 13px;
+  font-size: 15px;
   line-height: 18px;
 }
 
@@ -33,11 +36,11 @@ a {
 }
 
 th {
-  padding-bottom: 5px;
+  padding: 5px;
 }
 
 td {
-  padding: 0 5px 7px;
+  padding: 10px;
 }
 
 div {
